--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: 海岛心hey
 subtitle:
 description: 每只菜鸟都有鹰的梦想
 author: 海岛心hey
-language: zh-Hans
+# language: zh-Hans !!!
 timezone:
 
 # URL
@@ -57,21 +57,25 @@ time_format: HH:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
+#
+# per_page: 10 !!!+
+# pagination_dir: page !!!+
 per_page: 10
 pagination_dir: page
 
-index_generator:
-  per_page: 5
-archive_generator:
-  per_page: 20
-  yearly: true
-  monthly: true
+# index_generator: !!!
+#   per_page: 5 !!!
+# archive_generator: !!!
+#   per_page: 20 !!!
+#   yearly: true !!!
+#   monthly: true !!!
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 #theme: landscape
-theme: next
+# theme: next !!!
+theme: vno
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
@@ -82,5 +86,5 @@ deploy:
   #github: git@github.com:EryouHao/EryouHao.github.io.git,master
   #repo: git@git.coding.net:heyfe/heyfe.git,master
 # 设置头像
-avatar: /images/avatar.jpg
+# avatar: /images/avatar.jpg !!!
 
