--- a/themes/vno/_config.yml
+++ b/themes/vno/_config.yml
@@ -3,6 +3,7 @@ menu:
   试炼之地: http://fehey.com/demos/
   hey-Audio: http://fehey.com/hey-Audio/
   简历: http://fehey.com/resume/
+  myFriends: http://fehey.com/friends/
 rss: /atom.xml
 description: 
 social:
